monitoring/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: monitoring-vs
  namespace: monitoring
spec:
  hosts:
    - "grafana.openpoc.dpdns.org"
  gateways:
    - istio-system/poc-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: kube-prometheus-stack-grafana
            port:
              number: 80

    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: kube-prometheus-stack-prometheus
            port:
              number: 9090
